--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.0.1",
+    "@radix-ui/react-icons": "^1.3.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "class-variance-authority": "^0.7.1",
     "next": "^15.0.4",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.0.1"
   }
 }
