--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ DB_PASSWORD=Akash@165572
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres.vihfekthkzrfsshpwyel:[YOUR-PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres"
-DIRECT_URL=""
+DATABASE_URL="postgresql://postgres.
+vihfekthkzrfsshpwyel:Akash@165572@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+DIRECT_URL="postgresql://postgres.vihfekthkzrfsshpwyel:Akash@165572@aws-0-eu-central-1.pooler.supabase.com:5432/postgres"
