--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
+    "@clerk/nextjs": "^5.1.4",
     "@types/node": "^22.10.1",
     "prisma": "^6.0.1"
   }
