--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-icons": "^1.3.2",
+    "@supabase/supabase-js": "^2.47.3",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "class-variance-authority": "^0.7.1",
@@ -20,10 +21,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@clerk/nextjs": "^5.1.4",
+    "@faker-js/faker": "^9.3.0",
     "@types/node": "^22.10.1",
     "prisma": "^6.0.1"
   }
